--- a/notebooks/6_ensemble_learning/6b_Bias-variance.ipynb
+++ b/notebooks/6_ensemble_learning/6b_Bias-variance.ipynb
@@ -26,22 +26,11 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "mYXSmAOY4FGz",
-        "colab_type": "text"
-      },
-      "source": [
-        "# 6b. Bias / variance tradeoff"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "fDYetE1s4FG2",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "63875d75-8f05-4c4d-c296-8d544e8c920f"
+        "colab": {}
       },
       "source": [
         "%matplotlib inline\n",
@@ -51,161 +40,20 @@
         "import numpy as np;\n",
         "import pandas as pd;\n",
         "import seaborn as sns;\n",
-        "sns.set_context(\"notebook\", font_scale=1.4);\n",
+        "sns.set_context(\"notebook\", font_scale=1.2);\n",
         "sns.set_style(\"whitegrid\");"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:100,300,400,500,700,800,900,100italic,300italic,400italic,500italic,700italic,800italic,900italic' rel='stylesheet' type='text/css'>\n",
-              "<link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic' rel='stylesheet' type='text/css'>\n",
-              "<link href='http://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>\n",
-              "<link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>\n",
-              "<link href='http://fonts.googleapis.com/css?family=Philosopher:400,700,400italic,700italic' rel='stylesheet' type='text/css'>\n",
-              "<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>\n",
-              "\n",
-              "<style>\n",
-              "\n",
-              "@font-face {\n",
-              "    font-family: \"Computer Modern\";\n",
-              "    src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunss.otf');\n",
-              "}\n",
-              "\n",
-              "\n",
-              "#notebook_panel { /* main background */\n",
-              "    background: #888;\n",
-              "    color: #f6f6f6;\n",
-              "}\n",
-              "\n",
-              "div.cell { /* set cell width to about 80 chars */\n",
-              "}\n",
-              "\n",
-              "div #notebook { /* centre the content */\n",
-              "    background: #fff; /* white background for content */\n",
-              "    margin: auto;\n",
-              "}\n",
-              "\n",
-              "#notebook li { /* More space between bullet points */\n",
-              "margin-top:0.8em;\n",
-              "}\n",
-              "\n",
-              "/* draw border around running cells */\n",
-              "div.cell.border-box-sizing.code_cell.running {\n",
-              "    border: 3px solid #111;\n",
-              "}\n",
-              "\n",
-              "/* Put a solid color box around each cell and its output, visually linking them together */\n",
-              "div.cell.code_cell {\n",
-              "    /*background-color: rgba(171,165,131,0.3); /*\n",
-              "    border-radius: 10px; /* rounded borders */\n",
-              "    padding: 1em;\n",
-              "    /*margin-top: 1em;*/\n",
-              "}\n",
-              "\n",
-              "div.text_cell_render{\n",
-              "    font-family: 'Open Sans', Helvetica;\n",
-              "    line-height: 140%;\n",
-              "    font-size: 105%;\n",
-              "    /*margin-top:15px;*/\n",
-              "    margin-bottom:8px;\n",
-              "    text-align:justify;\n",
-              "}\n",
-              "\n",
-              "/* Formatting for header cells */\n",
-              ".text_cell_render h1 {\n",
-              "    font-family: 'Open Sans',sans-serif;\n",
-              "    font-weight: 100;\n",
-              "    font-size: 30pt;\n",
-              "    line-height: 100%;\n",
-              "    display: block;\n",
-              "}\n",
-              "\n",
-              ".text_cell_render h2 {\n",
-              "    font-family: 'Philosopher', serif;\n",
-              "    font-weight: 700;\n",
-              "    font-size: 24pt;\n",
-              "    line-height: 100%;\n",
-              "    color: rgb(171,165,131);\n",
-              "    margin-bottom: 0.1em;\n",
-              "    margin-top: 0.1em;\n",
-              "    display: block;\n",
-              "}    \n",
-              "\n",
-              ".text_cell_render h3 {\n",
-              "    font-family: 'Philosopher', serif;\n",
-              "    margin-top:12px;\n",
-              "    margin-bottom: 3px;\n",
-              "    font-style: italic;\n",
-              "    color: rgb(95,92,72);\n",
-              "}\n",
-              "\n",
-              ".text_cell_render h4 {\n",
-              "    font-family: 'Philosopher', serif;\n",
-              "}\n",
-              "\n",
-              ".text_cell_render h5 {\n",
-              "    font-family: 'Alegreya Sans', sans-serif;\n",
-              "    font-weight: 300;\n",
-              "    font-size: 16pt;\n",
-              "    color: grey;\n",
-              "    font-style: italic;\n",
-              "    margin-bottom: .1em;\n",
-              "    margin-top: 0.1em;\n",
-              "    display: block;\n",
-              "}\n",
-              "\n",
-              ".text_cell_render h6 {\n",
-              "    font-family: 'PT Mono', sans-serif;\n",
-              "    font-weight: 300;\n",
-              "    font-size: 10pt;\n",
-              "    color: grey;\n",
-              "    margin-bottom: 1px;\n",
-              "    margin-top: 1px;\n",
-              "}\n",
-              "\n",
-              ".CodeMirror{\n",
-              "        font-family: \"PT Mono\";\n",
-              "        font-size: 100%;\n",
-              "}\n",
-              "\n",
-              ".output_area {\n",
-              "\tmargin-top:20px;\n",
-              "}\n",
-              "\n",
-              ".output_stderr {\n",
-              "\tdisplay:none;\n",
-              "\t}\n",
-              "\n",
-              ".output_subarea {\n",
-              "\tdisplay: block;\n",
-              "    margin: 0 auto;\n",
-              "}\n",
-              "\n",
-              ".output_png img {\n",
-              "    display: block;\n",
-              "    margin-left: auto;\n",
-              "    margin-right: auto;\n",
-              "}\n",
-              "\n",
-              ".prompt {\n",
-              "\tvisible: false;\n",
-              "\t}\n",
-              "\n",
-              "</style>\n",
-              "\n"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 1
-        }
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mYXSmAOY4FGz",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 6b. Bias / variance tradeoff"
       ]
     },
     {
