--- a/notebooks/8_dimensionality_reduction/8._Dimensionality_reduction.ipynb
+++ b/notebooks/8_dimensionality_reduction/8._Dimensionality_reduction.ipynb
@@ -83,7 +83,9 @@
         "colab_type": "text"
       },
       "source": [
-        "# 8. Dimensionality reduction"
+        "# 8. Dimensionality reduction\n",
+        "\n",
+        "![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/sdgroeve/Machine_Learning_course_UGent_D012554/blob/master/notebooks/8_dimensionality_reduction/8._Dimensionality_reduction.ipynb]\n"
       ]
     },
     {
