--- a/notebooks/8_dimensionality_reduction/8._Dimensionality_reduction.ipynb
+++ b/notebooks/8_dimensionality_reduction/8._Dimensionality_reduction.ipynb
@@ -83,9 +83,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# 8. Dimensionality reduction\n",
-        "\n",
-        "![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/sdgroeve/Machine_Learning_course_UGent_D012554/blob/master/notebooks/8_dimensionality_reduction/8._Dimensionality_reduction.ipynb]\n"
+        "# 8. Dimensionality reduction\n"
       ]
     },
     {
@@ -107,18 +105,18 @@
       "metadata": {
         "id": "dDHP7sjs82CE",
         "colab_type": "code",
-        "outputId": "76495818-23da-40ce-8527-925dab69f851",
+        "outputId": "b73942a9-73f5-4751-eeb8-75275004f7b8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 576
         }
       },
       "source": [
-        "dataset = pd.read_csv('https://raw.githubusercontent.com/sdgroeve/Machine_Learning_course_UGent_D012554/master/notebooks/8_dimensionality_reduction/pca.csv',sep=',')\n",
+        "dataset = pd.read_csv('https://raw.githubusercontent.com/sdgroeve/Machine_Learning_course_UGent_D012554/master/notebooks/8_dimensionality_reduction/pca.csv')\n",
         "sns.lmplot(x=\"x1\", y=\"x2\", data=dataset, fit_reg=False, height=8, scatter_kws={\"s\": 80})\n",
         "plt.show()"
       ],
-      "execution_count": 3,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -149,7 +147,7 @@
       "metadata": {
         "id": "pZpDJ_Oz82CJ",
         "colab_type": "code",
-        "outputId": "2176688e-1a33-4d58-e08f-c1439ec94ab9",
+        "outputId": "4e352194-0f7a-4269-8a15-bd4e8e1fdbb7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 488
@@ -162,7 +160,7 @@
         "plot_eigenvectors(dataset,w,v)\n",
         "plt.show()"
       ],
-      "execution_count": 4,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -195,7 +193,7 @@
       "metadata": {
         "id": "n6Ll9jF682CN",
         "colab_type": "code",
-        "outputId": "ed6ad29d-d544-4b4f-aee9-b8a2e37b986f",
+        "outputId": "566824b3-47da-4fab-bfab-1f887fb3cab3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -205,7 +203,7 @@
         "print(\"Eigenvalue for PC1 (w_0): {:.2f}\".format(w[0]))\n",
         "print(\"Eigenvalue for PC2 (w_1): {:.2f}\".format(w[1]))"
       ],
-      "execution_count": 5,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -236,7 +234,7 @@
       "metadata": {
         "id": "c9JVM6nR82CR",
         "colab_type": "code",
-        "outputId": "a047cbff-d3d3-4502-a681-e044564940fa",
+        "outputId": "995879d5-4633-488c-cd43-cf73d1e9a437",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -247,7 +245,7 @@
         "print(\"Variance explained by PC1: {}\".format(var_explained[0]))\n",
         "print(\"Variance explained by PC2: {}\".format(var_explained[1]))"
       ],
-      "execution_count": 6,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,7 +281,7 @@
       "metadata": {
         "id": "e3gvqZDJ82Cf",
         "colab_type": "code",
-        "outputId": "7b2278d3-f214-470d-f9cf-c4af8c5344da",
+        "outputId": "92f10c7c-1b76-4b98-abec-9df1d0ecd8b1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 434
@@ -294,7 +292,7 @@
         "sns.distplot(v[0,0]*dataset['x1']+v[1,0]*dataset['x2'], color=\"b\")\n",
         "plt.show()"
       ],
-      "execution_count": 7,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "display_data",
@@ -360,7 +358,7 @@
       "metadata": {
         "id": "FGLD1jBi82Cn",
         "colab_type": "code",
-        "outputId": "72d63805-0ee6-4497-bddc-92f8c26915a4",
+        "outputId": "4ba1a93a-6158-4748-840a-e48831d3df4f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 504
@@ -378,7 +376,7 @@
         "           fit_reg=False, height=7, scatter_kws={\"s\": 80})\n",
         "plt.show()"
       ],
-      "execution_count": 9,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "display_data",
@@ -409,7 +407,7 @@
       "metadata": {
         "id": "Z90wRK1l82Cr",
         "colab_type": "code",
-        "outputId": "2876d92b-ff9b-46e9-d3b7-9b1e3cb6040a",
+        "outputId": "8f40a544-1ee3-4aaf-9313-c725bd385397",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -419,7 +417,7 @@
         "print(\"Variance explained by PC1: {}\".format(pca.explained_variance_ratio_[0]))\n",
         "print(\"Variance explained by PC2: {}\".format(pca.explained_variance_ratio_[1]))"
       ],
-      "execution_count": 10,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -500,7 +498,7 @@
       "metadata": {
         "id": "KSV-iC5B82Cy",
         "colab_type": "code",
-        "outputId": "722e7b06-1689-49a4-f85f-83c2f4ae9e63",
+        "outputId": "8a6861d1-cc1f-4e23-abd9-a6622e79136f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 355
@@ -510,7 +508,7 @@
         "sim_matrix_cities = pd.read_csv('https://raw.githubusercontent.com/sdgroeve/Machine_Learning_course_UGent_D012554/master/notebooks/8_dimensionality_reduction/cities_us.csv',sep=' ')\n",
         "sim_matrix_cities"
       ],
-      "execution_count": 11,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -700,7 +698,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 23
         }
       ]
     },
@@ -719,7 +717,7 @@
       "metadata": {
         "id": "Fy0gILcA82C1",
         "colab_type": "code",
-        "outputId": "80eaf9b0-88c0-42c0-e4a8-2a310a390769",
+        "outputId": "18f53f5f-56eb-45aa-b0fc-32e3a5984cf6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 710
@@ -736,7 +734,7 @@
         "                                    sim_matrix_cities.columns.values)\n",
         "plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "display_data",
