--- a/practicum/3._Classification/2.1._Classification_solutions.ipynb
+++ b/practicum/3._Classification/2.1._Classification_solutions.ipynb
@@ -2640,7 +2640,9 @@
         "colab_type": "text"
       },
       "source": [
-        "*Create a plot that looks like this:*"
+        "*Create a plot that looks like this:*\n",
+        "\n",
+        "![plot](https://raw.githubusercontent.com/sdgroeve/Machine_Learning_course_UGent_D012554/master/practicum/3._Classification/AG_plot.png)"
       ]
     },
     {
@@ -2648,7 +2650,7 @@
       "metadata": {
         "id": "ntsnD5Kwu25B",
         "colab_type": "code",
-        "outputId": "8887843f-03e5-436b-ea15-57c25a43f2ac",
+        "outputId": "710b4b4d-ebaa-4f8c-fc1f-1873b322dfe0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 202
@@ -2666,9 +2668,12 @@
         "F_importances[\"nuc\"] = F_importances[\"feature_name\"].apply(get_nuc)\n",
         "F_importances[\"position\"] = F_importances[\"feature_name\"].apply(get_position)\n",
         "\n",
-        "F_importances.head()"
+        "print(F_importances.head())\n",
+        "\n",
+        "plt.figure(figsize=(18,8))\n",
+        "sns.barplot(x=\"position\",y=\"importance\",hue=\"nuc\",data=F_importances)"
       ],
-      "execution_count": 56,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2750,7 +2755,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 56
+          "execution_count": 58
         }
       ]
     },
@@ -2766,8 +2771,7 @@
         }
       },
       "source": [
-        "plt.figure(figsize=(18,8))\n",
-        "sns.barplot(x=\"position\",y=\"importance\",hue=\"nuc\",data=F_importances)"
+        ""
       ],
       "execution_count": 57,
       "outputs": [
