--- a/practicum/Classification/splice_site_prediction.ipynb
+++ b/practicum/Classification/splice_site_prediction.ipynb
@@ -32,7 +32,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Classification"
+        "# Splice site prediction"
       ]
     },
     {
@@ -78,7 +78,7 @@
       "source": [
         "data.head(5)"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -180,7 +180,7 @@
         "data['label'].value_counts()\n",
         "###End code here"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -237,7 +237,7 @@
         "\n",
         "print(data.head())"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -323,7 +323,7 @@
         "\n",
         "data_features_int_encoding.head()"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -370,7 +370,7 @@
         "\n",
         "data_features_int_encoding.head()"
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -588,7 +588,7 @@
         "\n",
         "print(np.mean(scores))"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -673,7 +673,7 @@
         "model.fit(data_features_int_encoding,data.label)\n",
         "###End code here"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -750,7 +750,7 @@
         "\n",
         "print(score_acc)"
       ],
-      "execution_count": 39,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -812,7 +812,7 @@
         "\n",
         "print(score_acc)"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -857,7 +857,7 @@
         "\n",
         "print(score_acc)"
       ],
-      "execution_count": 42,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -885,18 +885,18 @@
       "metadata": {
         "id": "xMT2X0i7u23W",
         "colab_type": "code",
+        "outputId": "3a263c00-4906-40d0-c0f4-895da46c215c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 139
-        },
-        "outputId": "3a263c00-4906-40d0-c0f4-895da46c215c"
+        }
       },
       "source": [
         "predictions = model.predict_proba(data_test_features_int_encoding)\n",
         "\n",
         "print(predictions)"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -943,7 +943,7 @@
         "\n",
         "print(score_auc)"
       ],
-      "execution_count": 44,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1009,11 +1009,11 @@
       "metadata": {
         "id": "d61H88bFu23z",
         "colab_type": "code",
+        "outputId": "d05b7ae8-7e35-42ba-a110-96dbdcd65c7c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 222
-        },
-        "outputId": "d05b7ae8-7e35-42ba-a110-96dbdcd65c7c"
+        }
       },
       "source": [
         "###Start code here\n",
@@ -1022,7 +1022,7 @@
         "\n",
         "data_features_onehot_encoding.head()"
       ],
-      "execution_count": 46,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1581,11 +1581,11 @@
       "metadata": {
         "id": "7Nszf4267siU",
         "colab_type": "code",
+        "outputId": "55dd8f56-6d02-4816-9607-ef4d21237e20",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 222
-        },
-        "outputId": "55dd8f56-6d02-4816-9607-ef4d21237e20"
+        }
       },
       "source": [
         "columns = []\n",
@@ -1598,7 +1598,7 @@
         "data_features_onehot_encoding.columns = columns\n",
         "data_features_onehot_encoding.head()"
       ],
-      "execution_count": 47,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2175,7 +2175,7 @@
         "\n",
         "print(score_auc)"
       ],
-      "execution_count": 48,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2217,7 +2217,7 @@
         "\n",
         "print(score_acc)"
       ],
-      "execution_count": 49,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2266,7 +2266,7 @@
         "\n",
         "print(grid_search.best_estimator_)"
       ],
-      "execution_count": 50,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2364,7 +2364,7 @@
         "\n",
         "print(score_auc)"
       ],
-      "execution_count": 51,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2405,7 +2405,7 @@
         "\n",
         "print(score_auc)"
       ],
-      "execution_count": 52,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2443,7 +2443,7 @@
       "source": [
         "print(model.coef_[0])"
       ],
-      "execution_count": 53,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2486,11 +2486,11 @@
       "metadata": {
         "id": "1Mnte18-u242",
         "colab_type": "code",
+        "outputId": "9195102a-1fec-4acb-f4e4-4bdf5aabeb72",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 202
-        },
-        "outputId": "9195102a-1fec-4acb-f4e4-4bdf5aabeb72"
+        }
       },
       "source": [
         "F_importances = []\n",
@@ -2499,7 +2499,7 @@
         "F_importances = pd.DataFrame(F_importances,columns=[\"feature_name\",\"importance\"])\n",
         "F_importances.head()    "
       ],
-      "execution_count": 54,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2608,7 +2608,7 @@
         "chart.set_xticklabels(chart.get_xticklabels(), rotation=90, horizontalalignment='right')\n",
         "plt.show()"
       ],
-      "execution_count": 55,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2673,7 +2673,7 @@
         "plt.figure(figsize=(18,8))\n",
         "sns.barplot(x=\"position\",y=\"importance\",hue=\"nuc\",data=F_importances)"
       ],
-      "execution_count": 58,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2773,7 +2773,7 @@
       "source": [
         ""
       ],
-      "execution_count": 57,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
