--- a/kaggle/Eye State Detection Train Test Split.ipynb
+++ b/kaggle/Eye State Detection Train Test Split.ipynb
@@ -21,7 +21,8 @@
     },
     "colab": {
       "name": "Eye State Detection Train Test Split.ipynb",
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     }
   },
   "cells": [
@@ -857,13 +858,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 129
         },
-        "outputId": "09ed81e4-42f8-474a-cc61-3573c36be3a6"
+        "outputId": "4cf8b042-7479-4525-ce25-d2814af3ad64"
       },
       "source": [
         "print(trainset[\"label\"].value_counts())\n",
         "print(testset[\"label\"].value_counts())"
       ],
-      "execution_count": 64,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "stream",
@@ -889,7 +890,8 @@
       "source": [
         "trainset.pop(\"cluster\")\n",
         "testset.pop(\"cluster\")\n",
-        "testlabels = testset.pop(\"label\")"
+        "testlabels = pd.DataFrame()\n",
+        "testlabels[\"label\"] = testset.pop(\"label\")"
       ],
       "execution_count": 0,
       "outputs": []
@@ -903,10 +905,15 @@
       },
       "source": [
         "trainset.to_csv(\"eeg_train.csv\",index=False)\n",
-        "testset.to_csv(\"eeg_test.csv\") #still to set index column name in file!\n",
-        "testlabels.to_csv(\"eeg_test_labels.csv\")\n",
-        "tmp = pd.DataFrame(random.choices(range(0,2),k=len(testlabels)))\n",
-        "tmp.to_csv(\"sample_submission.csv\")"
+        "testset[\"index\"] = [i for i in range(len(testset))]\n",
+        "testset.to_csv(\"eeg_test.csv\",index=False)\n",
+        "testlabels[\"index\"] = [i for i in range(len(testlabels))]\n",
+        "testlabels.to_csv(\"eeg_test_labels.csv\",index=False)\n",
+        "\n",
+        "tmp = pd.DataFrame()\n",
+        "tmp[\"index\"] = [i for i in range(len(testlabels))]\n",
+        "tmp[\"label\"] = random.choices(range(0,2),k=len(testlabels))\n",
+        "tmp.to_csv(\"sample_submission.csv\",index=False)"
       ],
       "execution_count": 0,
       "outputs": []
