--- a/notebooks/7_clustering/7._Clustering.ipynb
+++ b/notebooks/7_clustering/7._Clustering.ipynb
@@ -100,17 +100,17 @@
         "\n",
         "1. Initialize cluster centroids (e.g. *at random*):\n",
         "\n",
-        "    $$\\mu^{(0)}_1, \\ldots, \\mu^{(0)}_k \\in \\mathbb{R}^n.$$\n",
+        "    $\\mu^{(0)}_1, \\ldots, \\mu^{(0)}_k \\in \\mathbb{R}^n.$\n",
         "\n",
         "2. Iterate steps ($s=0$) until converged:\n",
         "\n",
         "    a. for each data point $x^{(i)}$ find the closest centroid \n",
         "    \n",
-        "    $$c_i = \\underset{j}{\\operatorname{argmax}} || x^{(i)} - \\mu_j^{(s)}||,$$\n",
+        "    $c_i = \\underset{j}{\\operatorname{argmin}} || x^{(i)} - \\mu_j^{(s)}||,$\n",
         "    \n",
         "    b. update the centroids as\n",
         "    \n",
-        "    $$\\mu_j^{(s+1)} = \\frac{\\sum_{i=1}^n I[c_i = j] x^{(i)}}{\\sum_{i=1}^n I[c_i = j]},$$\n",
+        "    $\\mu_j^{(s+1)} = \\frac{\\sum_{i=1}^n I[c_i = j] x^{(i)}}{\\sum_{i=1}^n I[c_i = j]},$\n",
         "    \n",
         "    where $I[c_i = j]$ equals 1 if $c_i$ equals $j$ and 0 otherwise. \n",
         "    \n",
@@ -134,7 +134,7 @@
         "sns.lmplot(x=\"x1\", y=\"x2\", hue='y', data=dataset_blops, fit_reg=False, height=8, scatter_kws={\"s\": 80})\n",
         "plt.show()"
       ],
-      "execution_count": 51,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -200,7 +200,7 @@
         "plt.scatter(*start_centroids.T, c='k', marker='o', s=200)\n",
         "plt.show()"
       ],
-      "execution_count": 53,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -248,7 +248,7 @@
         "distances = cdist(start_centroids, dataset_blops[['x1','x2']])\n",
         "print(distances)"
       ],
-      "execution_count": 54,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -287,7 +287,7 @@
         "labels = distances.argmin(axis=0)\n",
         "print(labels)"
       ],
-      "execution_count": 55,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -355,7 +355,7 @@
         "plt.scatter(*start_centroids.T, c='k', marker='o', s=200)\n",
         "plt.show()"
       ],
-      "execution_count": 56,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -400,7 +400,7 @@
         "new_centroids = dataset_blops[['x1','x2','cluster_labels']].groupby('cluster_labels').mean().values\n",
         "print(new_centroids)"
       ],
-      "execution_count": 57,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -430,7 +430,7 @@
         "plt.scatter(*new_centroids.T, c='k', marker='o', s=200)\n",
         "plt.show()"
       ],
-      "execution_count": 58,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -479,7 +479,7 @@
         "plt.scatter(*km.cluster_centers_.T, c='k', marker='o', s=200)\n",
         "plt.show()"
       ],
-      "execution_count": 59,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -532,7 +532,7 @@
         "plt.scatter(*km.cluster_centers_.T, c='k', marker='o', s=200)\n",
         "plt.show()"
       ],
-      "execution_count": 60,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -573,7 +573,7 @@
         "$$SC = \\frac{1}{n}\\sum\\limits_{i=1}^ns(x).$$\n",
         "<br>\n",
         "\n",
-        "The quality of a clustering can also be measured by the **inertia**. This metric is used to estimate how close the data points in a cluster are (a bit like cohesion discussed above). It is calculated as the sum of squared distance for each point to it's closest centroid, i.e., its assigned cluster center. The intuition behind inertia is that clusters with lower inertia are better as it means closely related points form a cluster. "
+        "The quality of a clustering can also be measured by the **inertia**. This metric is used to estimate how close the data points in a cluster are (a bit like cohesion discussed above). It is calculated as the sum of squared distance for each point to its closest centroid, i.e., its assigned cluster center. The intuition behind inertia is that clusters with lower inertia are better as it means closely related points form a cluster. "
       ]
     },
     {
@@ -615,7 +615,7 @@
         "sns.pointplot(x=\"k\", y=\"inertia\", data=cluster_evaluation)\n",
         "plt.show()"
       ],
-      "execution_count": 61,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -687,7 +687,7 @@
         "plot_scatter_annotated(dataset_hc,range(len(dataset_hc)))\n",
         "plt.show()"
       ],
-      "execution_count": 62,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -733,7 +733,7 @@
         "sns.heatmap(distxy, annot=True, linewidths=.5)\n",
         "plt.show()"
       ],
-      "execution_count": 63,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -776,7 +776,7 @@
         "\n",
         "R = dendrogram(linkage(distxy, method='complete'))"
       ],
-      "execution_count": 64,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -818,7 +818,7 @@
         "plt.setp(cg.ax_heatmap.yaxis.get_majorticklabels(), rotation=0)\n",
         "plt.show()"
       ],
-      "execution_count": 65,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -862,7 +862,7 @@
         "tissue = dataset_genes.pop('Tissue')\n",
         "print(dataset_genes.shape)"
       ],
-      "execution_count": 66,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -887,7 +887,7 @@
       "source": [
         "tissue.value_counts()"
       ],
-      "execution_count": 67,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -919,7 +919,7 @@
       "source": [
         "dataset_genes.head()"
       ],
-      "execution_count": 68,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1581,7 +1581,7 @@
         "dataset_genes.boxplot()\n",
         "plt.show()"
       ],
-      "execution_count": 69,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1629,7 +1629,7 @@
         "dataset_genes_norm.boxplot()\n",
         "plt.show()"
       ],
-      "execution_count": 70,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1672,7 +1672,7 @@
         "plt.setp(cg.ax_heatmap.yaxis.get_majorticklabels(), rotation=0)\n",
         "plt.show()"
       ],
-      "execution_count": 71,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
