--- a/practicum/Classification/splice_site_prediction.ipynb
+++ b/practicum/Classification/splice_site_prediction.ipynb
@@ -59,7 +59,7 @@
       "source": [
         "import pandas as pd\n",
         "\n",
-        "data = pd.read_csv(\"https://raw.githubusercontent.com/sdgroeve/Machine_Learning_course_UGent_D012554/master/practicum/Classification/acceptor_sites_dataset_train.csv\")"
+        "data = pd.read_csv(\"https://raw.githubusercontent.com/sdgroeve/Machine_Learning_course_UGent_D012554_data/master/practicum/Classification/acceptor_sites_dataset_train.csv\")"
       ],
       "execution_count": 0,
       "outputs": []
@@ -69,16 +69,16 @@
       "metadata": {
         "id": "_lJt4Vopu212",
         "colab_type": "code",
-        "outputId": "89cb8a9c-2987-4001-f643-4c7e0f0d7c7c",
+        "outputId": "5be0c1b0-96cc-485c-b776-f05b91617bfb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 202
+          "height": 206
         }
       },
       "source": [
         "data.head(5)"
       ],
-      "execution_count": 14,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -148,7 +148,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 5
         }
       ]
     },
@@ -169,10 +169,10 @@
       "metadata": {
         "id": "PYhNkKz3u217",
         "colab_type": "code",
-        "outputId": "dbf7afa3-6672-464d-966b-2e4a05364968",
+        "outputId": "22209f38-cbcb-47f7-df40-7b83cffc09c5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 69
+          "height": 73
         }
       },
       "source": [
@@ -180,7 +180,7 @@
         "data['label'].value_counts()\n",
         "###End code here"
       ],
-      "execution_count": 15,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -194,7 +194,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 6
         }
       ]
     },
@@ -219,10 +219,10 @@
       "metadata": {
         "id": "k8ThMz7Su22A",
         "colab_type": "code",
-        "outputId": "f5bceceb-7593-4174-9a8c-39efbd26d579",
+        "outputId": "d53b9f36-706d-4715-aa59-8e2ca7d7fda5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 225
+          "height": 240
         }
       },
       "source": [
@@ -237,7 +237,7 @@
         "\n",
         "print(data.head())"
       ],
-      "execution_count": 16,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -310,10 +310,10 @@
       "metadata": {
         "id": "nFRdEtCeu22J",
         "colab_type": "code",
-        "outputId": "26bc787a-96e5-49d5-e467-f0319fab2d69",
+        "outputId": "aa2c17a9-c4bb-46ab-f781-9b9d276e8e59",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 121
+          "height": 129
         }
       },
       "source": [
@@ -323,7 +323,7 @@
         "\n",
         "data_features_int_encoding.head()"
       ],
-      "execution_count": 18,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -340,7 +340,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 9
         }
       ]
     },
@@ -359,10 +359,10 @@
       "metadata": {
         "id": "ztKXm9yYu22Q",
         "colab_type": "code",
-        "outputId": "43eb5d69-80c6-4666-d555-43c5e12fd2a4",
+        "outputId": "9dc6cded-c9c0-4c6f-b1f8-3a650bd1a101",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 202
+          "height": 206
         }
       },
       "source": [
@@ -370,7 +370,7 @@
         "\n",
         "data_features_int_encoding.head()"
       ],
-      "execution_count": 19,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -548,7 +548,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 10
         }
       ]
     },
@@ -569,10 +569,10 @@
       "metadata": {
         "id": "jc7J8SrIu22X",
         "colab_type": "code",
-        "outputId": "c6e3d73c-354e-419c-89bb-988c366a4c81",
+        "outputId": "5d9ba961-b669-4a94-a9d7-5243d57cab27",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 36
         }
       },
       "source": [
@@ -587,7 +587,7 @@
         "\n",
         "print(np.mean(scores))"
       ],
-      "execution_count": 20,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -616,7 +616,7 @@
         "colab": {}
       },
       "source": [
-        "data_test = pd.read_csv(\"https://raw.githubusercontent.com/sdgroeve/Machine_Learning_course_UGent_D012554/master/practicum/Classification/acceptor_sites_dataset_test.csv\")"
+        "data_test = pd.read_csv(\"https://raw.githubusercontent.com/sdgroeve/Machine_Learning_course_UGent_D012554_data/master/practicum/Classification/acceptor_sites_dataset_test.csv\")"
       ],
       "execution_count": 0,
       "outputs": []
@@ -661,10 +661,10 @@
       "metadata": {
         "id": "gHuDj5xsu22v",
         "colab_type": "code",
-        "outputId": "ab829e80-02d8-429e-b5be-22a792ade958",
+        "outputId": "d8c46421-8aa9-4abe-9fd3-e1c1c7397ea3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 104
+          "height": 110
         }
       },
       "source": [
@@ -672,7 +672,7 @@
         "model.fit(data_features_int_encoding,data.label)\n",
         "###End code here"
       ],
-      "execution_count": 23,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -688,7 +688,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 14
         }
       ]
     },
@@ -734,10 +734,10 @@
       "metadata": {
         "id": "TTFGB05gu228",
         "colab_type": "code",
-        "outputId": "a268facc-27cc-4fae-97e4-0da2b07ac9f6",
+        "outputId": "ab15f4d5-af1a-4f1d-c3ba-c377dbf3abf3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 36
         }
       },
       "source": [
@@ -749,7 +749,7 @@
         "\n",
         "print(score_acc)"
       ],
-      "execution_count": 25,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -798,10 +798,10 @@
       "metadata": {
         "id": "fmdBsSaou23K",
         "colab_type": "code",
-        "outputId": "ebd5807d-9ae5-4160-c0b4-e88364cc5e9a",
+        "outputId": "a4efb18f-1f8a-4cb3-e49b-16ae5938a95a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 36
         }
       },
       "source": [
@@ -811,7 +811,7 @@
         "\n",
         "print(score_acc)"
       ],
-      "execution_count": 27,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -843,10 +843,10 @@
       "metadata": {
         "id": "nTjM_o7Iu23Q",
         "colab_type": "code",
-        "outputId": "5fd6b99e-14d0-4cfa-b71e-3537e1205cfe",
+        "outputId": "f9c9fda5-fa07-4452-cf35-8e36ad114b3e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 36
         }
       },
       "source": [
@@ -856,7 +856,7 @@
         "\n",
         "print(score_acc)"
       ],
-      "execution_count": 28,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -884,10 +884,10 @@
       "metadata": {
         "id": "xMT2X0i7u23W",
         "colab_type": "code",
-        "outputId": "be9e3c06-6d70-4a3d-df97-51db8b6f37b4",
+        "outputId": "069d78eb-be22-401c-cf3d-c98ad4fc5a6f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 139
+          "height": 147
         }
       },
       "source": [
@@ -895,7 +895,7 @@
         "\n",
         "print(predictions)"
       ],
-      "execution_count": 29,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -929,10 +929,10 @@
       "metadata": {
         "id": "k7Zj60JBu23i",
         "colab_type": "code",
-        "outputId": "7cb146fa-01bb-46e6-fda9-25dfb4877354",
+        "outputId": "d32a2e3d-6baa-43ee-969f-afa70c6f08e1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 36
         }
       },
       "source": [
@@ -942,7 +942,7 @@
         "\n",
         "print(score_auc)"
       ],
-      "execution_count": 30,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -1008,10 +1008,10 @@
       "metadata": {
         "id": "d61H88bFu23z",
         "colab_type": "code",
-        "outputId": "d701ee2a-73eb-418c-c69f-b9a7ad4fbd78",
+        "outputId": "4d08550b-3d0a-40a1-c4d3-2fca8de230aa",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 222
+          "height": 226
         }
       },
       "source": [
@@ -1021,7 +1021,7 @@
         "\n",
         "data_features_onehot_encoding.head()"
       ],
-      "execution_count": 32,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1561,7 +1561,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 32
+          "execution_count": 23
         }
       ]
     },
@@ -1580,10 +1580,10 @@
       "metadata": {
         "id": "7Nszf4267siU",
         "colab_type": "code",
-        "outputId": "1e4aefb9-7e08-40ed-a141-954fdd8e753f",
+        "outputId": "3893531a-23e8-457c-8efe-16929cc7791e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 222
+          "height": 226
         }
       },
       "source": [
@@ -1597,7 +1597,7 @@
         "data_features_onehot_encoding.columns = columns\n",
         "data_features_onehot_encoding.head()"
       ],
-      "execution_count": 33,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2137,7 +2137,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 24
         }
       ]
     },
@@ -2159,10 +2159,10 @@
       "metadata": {
         "id": "bq2cZVNSu24F",
         "colab_type": "code",
-        "outputId": "5162f92b-6a34-48b0-c7bb-2b3c38ec8e75",
+        "outputId": "159ebfd3-fb04-40af-a6b2-8137aab19f76",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 36
         }
       },
       "source": [
@@ -2174,7 +2174,7 @@
         "\n",
         "print(score_auc)"
       ],
-      "execution_count": 34,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -2200,10 +2200,10 @@
       "metadata": {
         "id": "GeCkxuubu24M",
         "colab_type": "code",
-        "outputId": "0ff43170-b313-45c4-aeac-317b5e9f6ba8",
+        "outputId": "502dc7a6-1997-4961-8a70-bc1a02b4b6bd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 36
         }
       },
       "source": [
@@ -2216,7 +2216,7 @@
         "\n",
         "print(score_acc)"
       ],
-      "execution_count": 35,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -2246,10 +2246,10 @@
       "metadata": {
         "id": "B63LA0zwu24S",
         "colab_type": "code",
-        "outputId": "964256f8-daf4-4ece-bb94-c43f134719e6",
+        "outputId": "1e4c5b6c-d833-4c9e-f6bb-2cc1e8c817e9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 936
+          "height": 1000
         }
       },
       "source": [
@@ -2265,7 +2265,7 @@
         "\n",
         "print(grid_search.best_estimator_)"
       ],
-      "execution_count": 36,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -2355,10 +2355,10 @@
       "metadata": {
         "id": "hWxVj0hRu24X",
         "colab_type": "code",
-        "outputId": "cb7bd9bc-e2d3-48af-9dbb-a104c3d863b2",
+        "outputId": "6330ac78-44b6-43c2-da1f-8798b3b1a1f6",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 36
         }
       },
       "source": [
@@ -2369,7 +2369,7 @@
         "\n",
         "print(score_auc)"
       ],
-      "execution_count": 37,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -2395,10 +2395,10 @@
       "metadata": {
         "id": "k5906bHvu24d",
         "colab_type": "code",
-        "outputId": "4c32ab9a-0fc7-4593-dfc5-ba5d291044ef",
+        "outputId": "917b912d-3596-4670-940d-8057286470f2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 36
         }
       },
       "source": [
@@ -2410,7 +2410,7 @@
         "\n",
         "print(score_auc)"
       ],
-      "execution_count": 38,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -2439,16 +2439,16 @@
       "metadata": {
         "id": "8f-NBEUt4AjE",
         "colab_type": "code",
-        "outputId": "16af35e9-135c-4db8-947f-aafbffa40540",
+        "outputId": "403323ff-3fba-48c0-b898-ad01850826bc",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 260
+          "height": 278
         }
       },
       "source": [
         "print(model.coef_[0])"
       ],
-      "execution_count": 39,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -2491,10 +2491,10 @@
       "metadata": {
         "id": "1Mnte18-u242",
         "colab_type": "code",
-        "outputId": "a4bacfd4-0a17-4525-fb8e-3ce1f6077693",
+        "outputId": "74bff443-ad92-46cb-e5a2-cfee028d100f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 202
+          "height": 206
         }
       },
       "source": [
@@ -2504,7 +2504,7 @@
         "F_importances = pd.DataFrame(F_importances,columns=[\"feature_name\",\"importance\"])\n",
         "F_importances.head()    "
       ],
-      "execution_count": 40,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2574,7 +2574,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 40
+          "execution_count": 31
         }
       ]
     },
@@ -2593,10 +2593,10 @@
       "metadata": {
         "id": "s_thWFCY894M",
         "colab_type": "code",
-        "outputId": "aa0a9003-b856-4a5e-adfd-f2ee18cec431",
+        "outputId": "9355a2cf-b1c4-4cf0-d7c0-95b4a07972b7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 572
+          "height": 554
         }
       },
       "source": [
@@ -2613,7 +2613,7 @@
         "chart.set_xticklabels(chart.get_xticklabels(), rotation=90, horizontalalignment='right')\n",
         "plt.show()"
       ],
-      "execution_count": 41,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -2647,7 +2647,7 @@
       "source": [
         "*Create a plot that looks like this:*\n",
         "\n",
-        "![plot](https://raw.githubusercontent.com/sdgroeve/Machine_Learning_course_UGent_D012554/master/practicum/Classification/AG_plot.png)"
+        "![plot](https://raw.githubusercontent.com/sdgroeve/Machine_Learning_course_UGent_D012554_data/master/practicum/Classification/AG_plot.png)"
       ]
     },
     {
@@ -2655,10 +2655,10 @@
       "metadata": {
         "id": "ntsnD5Kwu25B",
         "colab_type": "code",
-        "outputId": "00e17107-6218-4360-bcd3-d85a0202c5dc",
+        "outputId": "562c9b9d-110f-4923-e0ac-b259a3f7dedc",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 619
+          "height": 627
         }
       },
       "source": [
@@ -2678,7 +2678,7 @@
         "plt.figure(figsize=(18,8))\n",
         "sns.barplot(x=\"position\",y=\"importance\",hue=\"nuc\",data=F_importances)"
       ],
-      "execution_count": 42,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -2696,13 +2696,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f8228ef4c88>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f3a96d88ef0>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 33
         },
         {
           "output_type": "display_data",
