--- a/practicum/PCA/fLu_eigengenes.ipynb
+++ b/practicum/PCA/fLu_eigengenes.ipynb
@@ -142,9 +142,7 @@
         "colab_type": "text"
       },
       "source": [
-        "---(Answer here)\n",
-        "\n",
-        "---(Solution)\n"
+        "---(Answer here)\n"
       ]
     },
     {
@@ -191,9 +189,7 @@
         "colab_type": "text"
       },
       "source": [
-        "---(Answer here)\n",
-        "\n",
-        "---(Solution) \n"
+        "---(Answer here)\n"
       ]
     },
     {
@@ -393,9 +389,7 @@
       "source": [
         "*What do you see?*\n",
         "\n",
-        "---(Answer)\n",
-        "\n",
-        "---(Solution) "
+        "---(Answer here)\n"
       ]
     },
     {
@@ -433,9 +427,7 @@
       "source": [
         "*Do the volunteers cluster together?*\n",
         "\n",
-        "---(Answer)\n",
-        "\n",
-        "---(Solution) "
+        "---(Answer here)\n"
       ]
     },
     {
@@ -478,9 +470,7 @@
       "source": [
         "*What do you see?*\n",
         "\n",
-        "---(Answer)\n",
-        "\n",
-        "---(Solution)\n",
+        "---(Answer here)\n",
         "\n",
         "*Do the same for the second eigengene PC2.*"
       ]
@@ -511,9 +501,7 @@
       "source": [
         "*Do we see something similar?*\n",
         "\n",
-        "---(Answer)\n",
-        "\n",
-        "---(Solution)\n",
+        "---(Answer here)\n",
         "\n",
         "*Now create the same plot for the first eigengene but remove the coloring by column 'subject'.This will create a summary plot where each point is the mean value for the first eigengene over all volunteers. The error bars estimate the variation between the volunteers (95% confidence interval):*"
       ]
