--- a/practicum/Classification/splice_site_prediction.ipynb
+++ b/practicum/Classification/splice_site_prediction.ipynb
@@ -531,9 +531,7 @@
     "id": "JbuR3_0Uu23V"
    },
    "source": [
-    "You should see a negative value. \n",
-    "\n",
-    "To compute the AUC, we need the predictions to be scores (a continuous value) rather than class labels (discrete values).\n",
+    "To compute the AUC, we actually need the predictions to be scores (a continuous value) rather than class labels (discrete values).\n",
     "\n",
     "For logistic regression these scores are the class probabilities predicted by the model (a value between 0 and 1). \n",
     "\n",
