--- a/Kaggle/SpaceshipTitanic/spaceship-titanic-template.ipynb
+++ b/Kaggle/SpaceshipTitanic/spaceship-titanic-template.ipynb
@@ -41,14 +41,6 @@
     "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from xgboost import XGBClassifier\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
@@ -450,7 +442,7 @@
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "X = train_data\n",
+    "X = train_data.copy()\n",
     "y = X.pop('Transported')\n",
     "\n",
     "model = LogisticRegression()\n",
